# Tuner

./: .editorconfig  README.md  example.doap  meson.build  meson.options  vala-lint.conf
.github/issue_template/: bug.yml
.github/workflows/: docs.yml
build-aux/: org.altlinux.Tuner.json
data/: desktop.in  gresource.xml  id.gschema.xml  id.metainfo.xml.in  meson.build  org.altlinux.Tuner.metainfo.xml.in
data/ui/: empty-page.blp  main-window.blp  meson.build  no-plugins-window.blp  panel-list-row.blp  panel-list.blp  panel-row.blp
data/ui/widgets/: meson.build  panel-page.blp
doc/: meson.build
lib/: meson.build
lib/data/: gresource.xml  meson.build
lib/data/stylesheet/: style.css
lib/data/ui/: combo-row.blp  data-combo-row.blp  font-row.blp  meson.build  page.blp  panel-content.blp  panel-page.blp  panel.blp  switch-row.blp  value-combo-row.blp
lib/src/: deps.in  main.vala  meson.build
lib/src/addins/: addin.vala  content-addin.vala  meson.build  page-addin.vala
lib/src/bindings/: binding.vala  file-content.vala  meson.build  property.vala
lib/src/bindings/setting/: meson.build  setting.vala
lib/src/bindings/setting/transforms/: flags-transform.vala  meson.build  path-transform.vala  setting-transform.vala  value-transform.vala
lib/src/bindings/validators/: meson.build  simple-validator.vala  validator.vala
lib/src/models/: meson.build  settings-source.vala
lib/src/ui/: meson.build
lib/src/ui/content/: group-content.vala  meson.build  page-content.vala  panel-page-content.vala
lib/src/ui/widgets/: action-row.vala  combo-row.vala  data-combo-row.vala  dialog.vala  entry.vala  expander.vala  file.vala  flags-switch-row.vala  font-row.vala  font.vala  group.vala  item.vala  layout-type.vala  meson.build  modifier.vala  page.vala  panel-content.vala  panel-page.vala  panel.vala  reset-button.vala  route.vala  spin.vala  switch-row.vala  switch.vala  value-combo-row.vala  value-switch-row.vala  widget.vala
lib/src/ui/widgets/combo/: choice-loader.vala  choice.vala  combo-row.vala  combo.vala  folder-choice.vala  meson.build
lib/src/utils/: file-util.vala  meson.build  settings-store.vala  type-util.vala  ui-util.vala
po/: POTFILES  Tuner.pot  meson.build  ru.po  tr.po  tuner.pot
src/: app.vala  build.vala.in  deps.in  main.vala  meson.build  test.vala
src/addins/: meson.build  page-addin.vala
src/ui/: empty-page.vala  main-window.vala  meson.build  no-plugins-window.vala  panel-list-row.vala  panel-list.vala  panel-row.vala  plugins-dialog.vala  searchable-panel-list.vala
src/widgets/: meson.build  panel-row.vala
vapi/: libpeas-2.vapi
