subdir('combo')

lib_sources += files(
    'file.vala',
    'font-row.vala',
    'font.vala',
    'group.vala',
    'layout-type.vala',
    'page.vala',
    'panel-content.vala',
    'panel-page.vala',
    'reset-button.vala',
    'route.vala',
    'spin.vala',
    'switch-row.vala',
    'switch.vala',
    'widget.vala'
)
