subdir('combo')

lib_sources += files(
    'file.vala',
    'font-row.vala',
    'font.vala',
    'group.vala',
    'item.vala',
    'page.vala',
    'panel-page.vala',
    'panel.vala',
    'reset-button.vala',
    'route.vala',
    'spin.vala',
    'switch-row.vala',
    'switch.vala',
    'widget.vala'
)
